public/index.css
h3, h4 {
    text-align: center;
    color: green;
    font-family: 'IBM Plex Serif', serif;
}

h2 {
  text-transform: capitalize;
}

hr {
    width: 10%;
}

.avo {
width: 50%;
display:block;
margin: auto;
}

i img{
    height: 1em;
}

.btn {
background-color: green;
}

 /* label color */
 .input-field label {
    color: green;
  }
  /* label focus color */
  .input-field input[type=text]:focus + label {
    color: green;
  }
  /* label underline focus color */
  .input-field input[type=text]:focus {
    border-bottom: 1px solid green !important;
    box-shadow: 0 1px 0 0 green;
  }
  /* valid color */
  .input-field input[type=text].valid {
    border-bottom: 1px solid green;
    box-shadow: 0 1px 0 0 green;
  }
  /* invalid color */
  .input-field input[type=text].invalid {
    border-bottom: 1px solid green;
    box-shadow: 0 1px 0 0 green;
  }
  /* icon prefix focus color */
  .input-field .prefix.active {
    color: green;
  }

  input[type=text]:not(.browser-default).validate:not([readonly])+label {
    color: green;
  
     
  }

.left {
  display: flex;
}
.left button {
  width: 40% !important;
  margin: 0 2.5%;

}

.mainContainer {
  height: 150px;
  
}
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}
   

